src/test/deca/context/invalid/operations/bool/invalid_bool_op_and_int_int.deca
// Description:
//    test invalid AND between int and int
//
// [Begin Result]
//invalid_bool_op_and_int_int.deca:12:20: Unsupported operation '&&' between types int and int. Operation '&&' supported only between booleans. (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    boolean a = 234 && 1;
}